# bernoulli

./: Cargo.toml  README.md
benches/: exact.rs
src/: lib.rs
